# ymca

./: .flake8  .gitignore  LICENSE  Makefile  README.md  config.env  device_info.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: IMPROVEMENTS-SUMMARY.md  SESSION-SUMMARY.md  hallucination-prevention.md  like-otter-using-stone.md  memory-improvements.md  memory-system-complete-improvements.md  memory-tool.md  model-converter.md  mtv-mcp-setup.md  mtv-prompt.txt  mtv-system-prompt.txt  question-generation-improvements.md  question-generation-principles.md  tool-index-preservation.md  web-interface.md
modules/chat/: chat_manager.py  planning_chat_manager.py
modules/config/: config.py
modules/filesystem/: filesystem_manager.py  models.py
modules/llm/: llm.py
modules/llm/devices/: base.py  cpu.py  cuda.py  device_detector.py  intel.py  mps.py
modules/memory/: embedding_service.py  memory_manager.py  models.py
modules/plan/: agent.py  example.py  models.py  persistence.py  plan_manager.py  planning_detector.py  response_processor.py  tool_registry.py  tool_setup.py
modules/tools/: filesystem.py  memory.py  registry.py  setup.py  synthesis.py  web.py
modules/web/: content_extractor.py  models.py  search_engine.py  selenium_manager.py  web_archive.py  web_browser.py
tests/: test_integration.py
tests/chat/: test_chat_manager.py
tests/config/: test_config.py
tests/filesystem/: test_filesystem_manager.py
tests/llm/: test_device_detection.py  test_llm.py
tests/memory/: test_memory_manager.py
tests/web/: test_web_browser.py
ymca/: __init__.py
ymca/chat/: __init__.py  api.py  chat_engine.py  history.py  message.py  tool.py  tool_parser.py  tool_selector.py
ymca/core/: __init__.py  answer_refiner.py  model_handler.py  question_parser.py  ui.py
ymca/tools/: __init__.py
ymca/tools/mcp/: __init__.py  client.py
ymca/tools/memory/: __init__.py  chunker.py  embedder.py  retriever.py  storage.py  tool.py  vector_store.py
